--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 .container {
   display: inline-block;
   height: 500px;
+  text-align: center;
 }
 img {
   margin: auto;
@@ -18,6 +19,7 @@ img {
   background-image: url("./img/blooddrip.png");
   background-repeat: no-repeat;
   background-position: center top;
+  text-align: center;
 }
 .play:hover {
   color: #680101;
